<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="rappay.com.rohit.rapidgrid.SignUp"
    tools:showIn="@layout/activity_sign_up">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sign_up_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/Signup"
            android:textColor="@color/colorAccent"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_ipl_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/sign_up_username_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hUsername"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/secondaryText"
                 />
        </android.support.design.widget.TextInputLayout>




            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_ipl_fullname"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/sign_up_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/FullName"
                    android:maxLines="1"
                    android:paddingBottom="15dp"
                    android:singleLine="true"
                    android:textColor="@color/secondaryText"/>

            </android.support.design.widget.TextInputLayout>




        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_ipl_phonenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/sign_up_phone_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/PhoneNumber"
                android:inputType="phone"
                android:maxLines="1"
                android:paddingBottom="15dp"
                android:singleLine="true"
                android:textColor="@color/secondaryText"
              />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_ipl_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/sign_up_email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hEmail"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingBottom="15dp"
                android:singleLine="true"
                android:textColor="@color/secondaryText"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_ipl_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/sign_up_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingBottom="15dp"
                android:singleLine="true"
                android:textColor="@color/secondaryText"


                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_ipl_repass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/sign_up_repassword_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/repassword"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingBottom="15dp"
                android:singleLine="true"
                android:textColor="@color/secondaryText"
             />
        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/sign_up_register_btn"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:background="@color/colorAccent"
                android:onClick="register"
                android:text="@string/Register"
                android:textColor="@color/white"

                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sign_up_old_user_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"

                android:onClick="backToLogin"
                android:padding="10dp"
                android:text="@string/ReturningUser"
                android:textColor="@color/primaryText" />
        </LinearLayout>

    </LinearLayout>






</RelativeLayout>
    </ScrollView>
