<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="rappay.com.rohit.rapidgrid.AccountActivity"
        tools:showIn="@layout/activity_account">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/account_ipl_Accountnumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/account_Accountnumber_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hAccountNumber"
                    android:enabled="false"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/secondaryText"
                    />
            </android.support.design.widget.TextInputLayout>




            <android.support.design.widget.TextInputLayout
                android:id="@+id/account_ipl_CardNumber"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/account_CardNumber_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hCardNumber"
                    android:enabled="false"
                    android:maxLines="1"
                    android:paddingBottom="15dp"
                    android:singleLine="true"
                    android:textColor="@color/secondaryText"/>

            </android.support.design.widget.TextInputLayout>




            <android.support.design.widget.TextInputLayout
                android:id="@+id/account_ipl_CustomerId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/account_CustomerId_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hCustomerID"
                    android:enabled="false"
                    android:maxLines="1"
                    android:paddingBottom="15dp"
                    android:singleLine="true"
                    android:textColor="@color/secondaryText"
                    />
            </android.support.design.widget.TextInputLayout>




            <android.support.design.widget.TextInputLayout
                android:id="@+id/account_ipl_AccountType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/account_AccountType_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hAccountType"
                    android:enabled="false"
                    android:maxLines="1"
                    android:paddingBottom="15dp"
                    android:singleLine="true"
                    android:textColor="@color/secondaryText"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/account_ipl_AccountBalance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/account_AccountBalance_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hAccountBalance"
                    android:maxLines="1"
                    android:enabled="false"
                    android:paddingBottom="15dp"
                    android:singleLine="true"
                    android:textColor="@color/secondaryText"


                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/account_ipl_AccountBalanceDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/account_AccountBalanceDate_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hAccountBalanceDate"

                    android:maxLines="1"
                    android:paddingBottom="15dp"
                    android:enabled="false"
                    android:singleLine="true"
                    android:textColor="@color/secondaryText"
                    />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                >
                <Button
                    android:id="@+id/account_refresh_btn"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:background="@color/colorAccent"

                    android:text="@string/AccountRefresh"
                    android:textColor="@color/white"


                    />

            </LinearLayout>




        </LinearLayout>

        </RelativeLayout>
    </ScrollView>