<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:clickable="true"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:border_width="1dp"
            app:border_color="#FF000000"
            android:src="@drawable/avatar_1_raster" />

        <TextView
            android:id="@+id/profile_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ProfileName"
            android:layout_marginTop="10dp" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginBottom="25dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/profile_ipl_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/profile_username_ets"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/hUsername"
                    android:maxLines="1"
                    android:singleLine="true"

                    android:textColor="@color/secondaryText"
                    />
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/profile_ipl_fullname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/profile_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/FullName"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/secondaryText"
                    />
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/profile_ipl_phonenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/profile_phonenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/PhoneNumber"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="number"
                android:textColor="@color/secondaryText"
                />
        </android.support.design.widget.TextInputLayout>
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/profile_ipl_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/profile_email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hEmail"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingBottom="15dp"
                android:enabled="false"
                android:singleLine="true"
                android:textColor="@color/secondaryText"
                />
        </android.support.design.widget.TextInputLayout>
</LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/AlternativeContacts"
            android:textSize="14sp"
            android:layout_marginTop="10dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/profile_ipl_emergencycnt1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/profile_emergencycnt1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/ContactNo"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/profile_ipl_emergencycnt1number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/profile_contactnumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/Number"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>
    </ScrollView>